Updated XHTML and CSS to meet strict standards.  Added verification logo.

--- a/www/trunk/signup.css
+++ b/www/trunk/signup.css
@@ -77,3 +77,12 @@ border: 1px solid navy;
 padding: 2px 6px;
 margin-left: 2em;
 }
+
+.validated
+{
+height:31px;
+width:88px;
+position:absolute;
+bottom:5px;
+right:5px;
+}
