--- a/www/trunk/homepage.css
+++ b/www/trunk/homepage.css
@@ -96,3 +96,12 @@ border-style:solid;
 border-width:0.1em;
 padding:1em;
 }
+
+.validated
+{
+height:31px;
+width:88px;
+position:absolute;
+bottom:5px;
+right:5px;
+}
