--- a/www/trunk/homepage.css
+++ b/www/trunk/homepage.css
@@ -94,7 +94,19 @@ clear:both;
 background:#cc9;
 border-style:solid;
 border-width:0.1em;
-padding:1em;
+padding:.5em;
+}
+
+#footerLeft
+{
+float:left;
+text-align:left;
+}
+
+#footerRight
+{
+float:right;
+text-align:right;
 }
 
 .validated
