--- a/www/trunk/homepage.css
+++ b/www/trunk/homepage.css
@@ -77,6 +77,7 @@ background-color:#ffa20f;
 float:left;
 padding:1em;
 height:25em;
+width:10em;
 border: .1em solid navy;
 margin-right: 1em;
 background-color: white;
