--- a/www/trunk/homepage.css
+++ b/www/trunk/homepage.css
@@ -155,17 +155,37 @@ padding: 0;
 
 .story
 {
-border: 1px solid black;
-margin: 0 0 1em 0;
-{
+margin: 0 0 2em 0;
+}
 
-.storyTitle
+.story a
+{
+text-decoration:none;
+}
+
+.story a:link
+{
+color:black;
+}
+
+.story a:visited
+{
+color:navy;
+}
+
+.story a:hover
+{
+background-color:orange;
+}
+
+.active a:active
 {
 
 }
 
 .storyDate
 {
-margin: 5em 0 5em 0;
+margin: .25em 0 .75em 0;
 font-style: italic;
+color:#666666;
 }
