--- a/www/trunk/signup.css
+++ b/www/trunk/signup.css
@@ -105,3 +105,22 @@ float:left;
 text-align:left;
 width:11em;
 }
+
+#nav
+{
+margin:0 auto 0 auto;
+background-color:white;
+margin-bottom: 1em;
+}
+
+#outline
+{
+margin: 0 auto 0 auto;
+}
+
+#logo
+{
+text-align:center;
+float:left;
+border: 1px solid black;
+}
