--- a/www/trunk/template.css
+++ b/www/trunk/template.css
@@ -1,6 +1,7 @@
 body
 {
 background-color:white;
+padding:1em;
 }
 h1
 {
@@ -69,4 +70,9 @@ width:88px;
 position:absolute;
 bottom:5px;
 right:5px;
+}
+
+#logo
+{
+text-align:center;
 }
