--- a/www/trunk/homepage.css
+++ b/www/trunk/homepage.css
@@ -86,6 +86,7 @@ background-image:url('orange_gradient.jpg');
 height:17.5em;
 width:20em;
 background-color:white;
+border:.1em solid navy;
 }
 
 #browse
@@ -210,4 +211,9 @@ background-color:orange;
 margin: .25em 0 .75em 0;
 font-style: italic;
 color:#666666;
+}
+
+a:visited
+{
+color:blue;
 }
