--- a/www/trunk/watercooler.css
+++ b/www/trunk/watercooler.css
@@ -86,8 +86,12 @@ text-align: left;
 
 ul
 {
+width:16.6em;
+height:25.5em;
 margin: 0;
-padding: 0;
+padding:0;
+overflow: auto;
+height:11em;
 }
 
 /* ELEMENT IDS */
@@ -223,7 +227,6 @@ width:16em;
 border: .1em groove navy;
 margin-right: 1em;
 background-color: white;
-overflow:auto;
 }
 
 #feedreader_stories
@@ -234,7 +237,7 @@ padding:1em;
 height:15.5em;
 border: .1em groove navy;
 background-color: white;
-overflow: auto;
+overflow:auto;
 }
 
 #footer
@@ -382,7 +385,7 @@ color:navy;
 
 .icon
 {
-margin-right:1em;
+margin-right:.5em;
 text-align:left;
 float:left;
 }
@@ -391,8 +394,7 @@ float:left;
 {
 background-color:orange;
 height:2em;
-width:19em;
-margin-right:1em;
+width:18.5em;
 }
 
 .feed
